added full user APIs documentation + minor fixes
